changed the logo and removed old ones

--- a/file.html
+++ b/file.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-content">
             <a href="file.html" class="logo">
-                <img src="logoone.png" alt="AfroByte Logo" class="logo-img">
+                <img src="IMG_3532.jpg" alt="AfroByte Logo" class="logo-img">
                 <span class="logo-text">A.F.R.O Byte</span>
             </a>
             <nav class="navbar">
