--- a/HomePage.html
+++ b/HomePage.html
@@ -13,7 +13,7 @@
 <body>
 <header class="header">
     <a href="#home" class="logo">
-        <img src="/mnt/data/logoone.png" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
+        <img src="IMG_3532.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
