--- a/ChatbotPage.html
+++ b/ChatbotPage.html
@@ -193,7 +193,7 @@
 <body>
 <header class="header">
     <a href="#home" class="logo">
-        <img src="logo.png" alt="Logo" class="logo-img">
+        <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
