--- a/ResourcesPage.html
+++ b/ResourcesPage.html
@@ -78,7 +78,7 @@
 <body>
 <header class="header">
   <a href="#home" class="logo">
-    <img src="/mnt/data/logoone.png" alt="Logo" class="logo-img">
+    <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
   </a>
   <i class='bx bx-menu' id="menu-icon"></i>
   <nav class="navbar">
