--- a/ChatbotPage.html
+++ b/ChatbotPage.html
@@ -199,9 +199,11 @@
     <nav class="navbar">
         <ul>
             <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="courses.html" class="nav-link">Courses <i class='bx bx-book'></i></a></li>
-            <li><a href="#chatbot" class="nav-link active">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="resources.html" class="nav-link">Resources <i class='bx bx-folder'></i></a></li>
+            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
+            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
+            <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
+            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
+            <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
         </ul>
     </nav>
 </header>
