Links to Pages Updated

--- a/CoursesPage.html
+++ b/CoursesPage.html
@@ -113,56 +113,56 @@
             <div class="course-card">
                 <h2>SQL Programming</h2>
                 <p>Learn how to work with relational databases and write powerful queries with SQL.</p>
-                <a href="sql-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/27axs9dO7AE" title="SQL Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- Java -->
             <div class="course-card">
                 <h2>Java Programming</h2>
                 <p>Master the core concepts of Java for building web and desktop applications.</p>
-                <a href="java-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/3u1fu6f8Hto" title="Java Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- JavaScript -->
             <div class="course-card">
                 <h2>JavaScript</h2>
                 <p>Explore JavaScript, the language of the web, to build interactive websites.</p>
-                <a href="javascript-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/fju9ii8YsGs" title="JavaScript Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- C -->
             <div class="course-card">
                 <h2>C Programming</h2>
                 <p>Get started with C, one of the most powerful and efficient programming languages.</p>
-                <a href="c-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/8PopR3x-VMY" title="C Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- C++ -->
             <div class="course-card">
                 <h2>C++ Programming</h2>
                 <p>Learn the advanced capabilities of C++ to build high-performance applications.</p>
-                <a href="cpp-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/vLnPwxZdW4Y" title="C++ Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- C# -->
             <div class="course-card">
                 <h2>C# Programming</h2>
                 <p>Dive into C#, a modern language for building software and apps with Microsoft frameworks.</p>
-                <a href="csharp-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/gfkTfcpWqAY" title="C# Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- Python -->
             <div class="course-card">
                 <h2>Python Programming</h2>
                 <p>Learn Python, a versatile language used for everything from web development to AI.</p>
-                <a href="python-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/WGJJIrtnfpk" title="Python Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- Go -->
             <div class="course-card">
                 <h2>Go Programming</h2>
                 <p>Discover Go, a modern language designed by Google for system and web development.</p>
-                <a href="go-course.html" class="btn">Start Learning</a>
+                <a href="LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/YS4e4q9oBaU" title="Go Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
