--- a/ResourcesPage.html
+++ b/ResourcesPage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resources - A.F.R.O Byte </title>
+  <title>Resources - A.F.R.O Byte</title>
   <link rel="stylesheet" href="style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <style>
@@ -126,6 +126,11 @@
         <h2>APIs</h2>
         <p>Access free APIs to build your next web or mobile application.</p>
         <a href="https://rapidapi.com/" target="_blank">Explore APIs</a>
+      </div>
+      <div class="resource-card">
+        <h2>Technical Interview Prep</h2>
+        <p>Prepare for coding interviews with comprehensive resources and practice problems.</p>
+        <a href="https://www.codepath.org/courses/tech-interview-prep?utm_term=coding%20interview%20practice&utm_campaign=Search_Tech_Interview_Prep_Paid_Tuff&utm_source=google_ads&utm_medium=ppc&hsa_acc=1387130392&hsa_cam=20626846030&hsa_grp=154706564776&hsa_ad=676236766289&hsa_src=g&hsa_tgt=kwd-307708918218&hsa_kw=coding%20interview%20practice&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=Cj0KCQiA57G5BhDUARIsACgCYnx9r9J_93Pksaa3r-D2HpMjd16IT5nRKFFyR2SbMqJ_d5-OFQhRaLoaAolBEALw_wcB" target="_blank">Start Preparing</a>
       </div>
     </div>
   </section>
