Touches to every page

--- a/CoursesPage.html
+++ b/CoursesPage.html
@@ -168,7 +168,9 @@
         </div>
     </section>
 </main>
-
+<footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
+    <p>AfroByte 2024</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
