--- a/HomePage.html
+++ b/HomePage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to A.F.R.O Byte </title>
+    <title>Welcome to A.F.R.O Byte</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="header">
-    <a href="#home" class="logo">
+    <a href="HomePage.html" class="logo">
         <img src="CroppedLogo.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
             <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-              <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
+            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
             <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
             <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
             <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
@@ -28,20 +28,22 @@
     </nav>
 </header>
 
+<div class="welcome-section" style="text-align: center; padding: 1rem; color: #aaa; margin-top: 80px;">
+    <h1>Welcome to A.F.R.O Byte</h1>
+    <p>Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
+</div>
+
 <div class="main-content">
     <div class="row">
         <div class="left-column">
             <div class="card">
                 <h2 class="aligncenter glitch" data-text="CS Internships">CS Internships</h2>
-
                 <div class="video-container">
                     <iframe src="https://youtube.com/embed/nak-UbbpxnU?si=0T24Bfo97cgC05Xk" title="Internships Video 1" frameborder="0" allowfullscreen></iframe>
                 </div>
-
                 <div class="video-container">
                     <iframe src="https://youtube.com/embed/OhMBBbhbX6A?si=47mzeoss4yzHerBI" title="Internships Video 2" frameborder="0" allowfullscreen></iframe>
                 </div>
-
                 <div class="video-container">
                     <iframe src="https://youtube.com/embed/BDepj5WFkas?si=N7PHGAHAkAUSyD-W" title="Internships Video 3" frameborder="0" allowfullscreen></iframe>
                 </div>
@@ -49,6 +51,10 @@
         </div>
     </div>
 </div>
+
+<footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
+    <p>AfroByte 2024</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
