--- a/ResourcesPage.html
+++ b/ResourcesPage.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 <header class="header">
-  <a href="#home" class="logo">
+  <a href="HomePage.html" class="logo">
     <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
   </a>
   <i class='bx bx-menu' id="menu-icon"></i>
@@ -135,6 +135,10 @@
     </div>
   </section>
 </main>
+
+<footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
+    <p>AfroByte 2024</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
