--- a/ContactPage.html
+++ b/ContactPage.html
@@ -1,190 +1,15 @@
-]<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - A.F.R.O Byte</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            text-decoration: none;
-            font-family: "Source Code Pro", monospace;
-        }
-
-        :root {
-            --bg-color: #0d0d0d;
-            --text-color: #00ff00;
-            --hover-color: #00cc00;
-            --navbar-bg: #1a1a1a;
-            --main-color: #00ff00;
-            --glitch-color1: #00ffcc;
-            --glitch-color2: #ff00ff;
-        }
-
-        body {
-            background: var(--bg-color);
-            color: var(--text-color);
-            font-family: 'Source Code Pro', monospace;
-            font-size: 1.6rem;
-        }
-
-        .header {
-            position: fixed;
-            width: 100%;
-            top: 0;
-            background-color: var(--navbar-bg);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            z-index: 100;
-            border-bottom: 2px solid var(--main-color);
-        }
-
-        .logo-img {
-            width: 6rem;
-            height: 6rem;
-            transition: transform 0.3s ease;
-        }
-
-        .logo-img:hover {
-            transform: scale(1.1);
-        }
-
-        .navbar ul {
-            list-style: none;
-            display: flex;
-            gap: 2rem;
-        }
-
-        .navbar a {
-            font-size: 1.8rem;
-            color: var(--text-color);
-            transition: color 0.3s ease;
-            position: relative;
-        }
-
-        .navbar a i {
-            margin-left: 0.5rem;
-        }
-
-        .navbar a:hover {
-            color: var(--hover-color);
-        }
-
-        .main-content {
-            padding: 8rem 2rem;
-            text-align: center;
-        }
-
-        .founders-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            padding: 4rem 2rem;
-        }
-
-        .founder-card {
-            background-color: var(--navbar-bg);
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .founder-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.8);
-        }
-
-        .founder-card h2 {
-            font-size: 2.4rem;
-            color: var(--main-color);
-            margin-bottom: 1.5rem;
-        }
-
-        .founder-card p {
-            font-size: 1.4rem;
-            color: var(--text-color);
-            line-height: 1.6;
-            margin-bottom: 1rem;
-        }
-
-        .aligncenter {
-            text-align: center;
-            color: var(--main-color);
-            text-transform: uppercase;
-        }
-
-        .glitch {
-            position: relative;
-            font-size: 2rem;
-            text-transform: uppercase;
-            color: var(--main-color);
-            animation: glitch 1.5s infinite;
-        }
-
-        .glitch::before,
-        .glitch::after {
-            content: attr(data-text);
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--bg-color);
-        }
-
-        .glitch::before {
-            left: 2px;
-            text-shadow: -2px 0 var(--glitch-color1);
-            clip: rect(24px, 550px, 90px, 0);
-        }
-
-        .glitch::after {
-            left: -2px;
-            text-shadow: -2px 0 var(--glitch-color2);
-            clip: rect(85px, 9999px, 140px, 0);
-        }
-
-        @keyframes glitch {
-            0% { clip: rect(44px, 9999px, 150px, 0); }
-            20% { clip: rect(5px, 9999px, 60px, 0); }
-            40% { clip: rect(85px, 9999px, 20px, 0); }
-            60% { clip: rect(10px, 9999px, 40px, 0); }
-            80% { clip: rect(75px, 9999px, 85px, 0); }
-            100% { clip: rect(20px, 9999px, 100px, 0); }
-        }
-
-        @media (max-width: 768px) {
-            .founders-container {
-                grid-template-columns: 1fr;
-            }
-
-            .navbar ul {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .header {
-                padding: 1rem;
-            }
-
-            .navbar a {
-                font-size: 1.6rem;
-            }
-
-            .main-content {
-                padding: 6rem 1rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
 <header class="header">
-    <a href="#home" class="logo">
+    <a href="HomePage.html" class="logo">
         <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
@@ -202,68 +27,45 @@
 
 <main class="main-content">
     <section id="contact" class="contact">
-        <h1 class="aligncenter glitch" data-text="Founders"> Founders </h1>
-        <h1 class="aligncenter glitch" data-text="Founders"> of </h1>
-        <h1 class="aligncenter glitch" data-text="Founders"> A.F.R.O Byte</h1>
+        <h1 class="aligncenter glitch" data-text="Founders">Founders</h1>
+        <h1 class="aligncenter glitch" data-text="Founders">of</h1>
+        <h1 class="aligncenter glitch" data-text="Founders">A.F.R.O Byte</h1>
+
         <div class="founders-container">
-            <!-- Selorm Essey -->
             <div class="founder-card">
                 <h2>Selorm Essey</h2>
-                <p>
-                    Hi, I'm Selorm Essey, and I attend the College of Wooster, where I major in Computer Science and minor in Data Science.
-                    As a founding member of A.F.R.O. Byte, I am passionate about creating a supportive community for individuals navigating the complexities of the tech world.
-                </p>
-                <p>
-                    A.F.R.O. Byte was born from our vision to prepare students for success before and during college, equipping them with the skills and confidence needed to excel in technology and entrepreneurship.
-                    We aspire to be leaders in tech education, empowering students from all backgrounds to innovate and lead in the digital age.
-                </p>
+                <p>Hi, I'm Selorm Essey, and I attend the College of Wooster, where I major in Computer Science and minor in Data Science. As a founding member of A.F.R.O. Byte, I am passionate about creating a supportive community for individuals navigating the complexities of the tech world.</p>
+                <p>A.F.R.O. Byte was born from our vision to prepare students for success before and during college, equipping them with the skills and confidence needed to excel in technology and entrepreneurship.</p>
+                <p><a href="#" target="_blank">GitHub Profile</a></p>
             </div>
 
-            <!-- Leslie Osei-Anane -->
             <div class="founder-card">
                 <h2>Leslie Osei-Anane</h2>
-                <p>
-                    Hi, I'm Leslie Osei-Anane, and I attend the College of Wooster, where I major in Computer Science.
-                    As a founding member of A.F.R.O. Byte, I am passionate about building a strong community that empowers individuals to thrive in the complex world of technology.
-                </p>
-                <p>
-                    Our vision is to equip students with the skills and confidence needed to excel in tech and entrepreneurship, preparing them for success both in college and beyond.
-                </p>
+                <p>Hi, I'm Leslie Osei-Anane, and I attend the College of Wooster, where I major in Computer Science. As a founding member of A.F.R.O. Byte, I am passionate about building a strong community that empowers individuals to thrive in the complex world of technology.</p>
+                <p>Our vision is to equip students with the skills and confidence needed to excel in tech and entrepreneurship, preparing them for success both in college and beyond.</p>
+                <p><a href="#" target="_blank">GitHub Profile</a></p>
             </div>
 
-            <!-- Raelyn Brooks -->
             <div class="founder-card">
                 <h2>Raelyn Brooks</h2>
-                <p>
-                    Hello, I’m Raelyn Brooks, one of the co-founders of A.F.R.O Byte. Currently, I am pursuing a double major in Chemistry and Computer Science at the College of Wooster.
-                    As a founder of this visionary company, I set a daily goal to transform the tech world for aspiring coders, ensuring they don’t face unnecessary struggles in learning or securing internships.
-                </p>
-                <p>
-                    Our vision is to create a strong foundation of talented young coders who will shape the future. Let’s break down the barriers to entering the tech industry, one byte at a time.
-                </p>
+                <p>Hello, I’m Raelyn Brooks, one of the co-founders of A.F.R.O Byte. Currently, I am pursuing a double major in Chemistry and Computer Science at the College of Wooster. As a founder of this visionary company, I set a daily goal to transform the tech world for aspiring coders.</p>
+                <p>Our vision is to create a strong foundation of talented young coders who will shape the future. Let’s break down the barriers to entering the tech industry, one byte at a time.</p>
+                <p><a href="#" target="_blank">GitHub Profile</a></p>
             </div>
 
-            <!-- Hiruy Worku -->
             <div class="founder-card">
                 <h2>Hiruy Worku (Ru)</h2>
-                <p>
-                    Hi, I'm Hiruy, but you can call me Ru. I am a founding member of A.F.R.O Byte, currently studying at the College of Wooster, where I major in Computer Science.
-                    My passion lies in leveraging technology to create innovative solutions for real-world problems.
-                </p>
-                <p>
-                    Through A.F.R.O Byte, I aim to inspire and mentor the next generation of tech leaders, ensuring they have access to the resources, knowledge, and support they need to thrive in this dynamic field.
-                    Our mission is to build a bridge between education and opportunity, helping young tech enthusiasts navigate the complexities of the tech world and achieve their goals.
-                </p>
+                <p>Hi, I'm Hiruy, but you can call me Ru. I am a founding member of A.F.R.O Byte, currently studying at the College of Wooster, where I major in Computer Science. My passion lies in leveraging technology to create innovative solutions for real-world problems.</p>
+                <p>Through A.F.R.O Byte, I aim to inspire and mentor the next generation of tech leaders.</p>
+                <p><a href="#" target="_blank">GitHub Profile</a></p>
             </div>
         </div>
     </section>
 </main>
 
-<!-- Footer with the saying -->
-<footer style="text-align: center; padding: 2rem; background-color: var(--navbar-bg); color: var(--main-color);">
-    <p>Changing the W<>rld 1 Byte @ a Time</p>
+<footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
+    <p>AfroByte 2024</p>
 </footer>
 
 </body>
 </html>
-
