--- a/LearnPage.html
+++ b/LearnPage.html
@@ -253,6 +253,9 @@
     </div>
   </section>
 </main>
+<footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
+  <p>AfroByte 2024</p>
+</footer>
 
 </body>
 </html>
