Links of github profiles added to contact section

--- a/ContactPage.html
+++ b/ContactPage.html
@@ -36,7 +36,7 @@
                 <h2>Selorm Essey</h2>
                 <p>Hi, I'm Selorm Essey, and I attend the College of Wooster, where I major in Computer Science and minor in Data Science. As a founding member of A.F.R.O. Byte, I am passionate about creating a supportive community for individuals navigating the complexities of the tech world.</p>
                 <p>A.F.R.O. Byte was born from our vision to prepare students for success before and during college, equipping them with the skills and confidence needed to excel in technology and entrepreneurship.</p>
-                <p><a href="#" target="_blank">GitHub Profile</a></p>
+                <p><a href="https://github.com/SelormEssey" target="_blank">GitHub Profile</a></p>
             </div>
 
             <div class="founder-card">
