--- a/ContactPage.html
+++ b/ContactPage.html
@@ -43,21 +43,21 @@
                 <h2>Leslie Osei-Anane</h2>
                 <p>Hi, I'm Leslie Osei-Anane, and I attend the College of Wooster, where I major in Computer Science. As a founding member of A.F.R.O. Byte, I am passionate about building a strong community that empowers individuals to thrive in the complex world of technology.</p>
                 <p>Our vision is to equip students with the skills and confidence needed to excel in tech and entrepreneurship, preparing them for success both in college and beyond.</p>
-                <p><a href="#" target="_blank">GitHub Profile</a></p>
+                <p><a href="https://github.com/lesprgm" target="_blank">GitHub Profile</a></p>
             </div>
 
             <div class="founder-card">
                 <h2>Raelyn Brooks</h2>
                 <p>Hello, I’m Raelyn Brooks, one of the co-founders of A.F.R.O Byte. Currently, I am pursuing a double major in Chemistry and Computer Science at the College of Wooster. As a founder of this visionary company, I set a daily goal to transform the tech world for aspiring coders.</p>
                 <p>Our vision is to create a strong foundation of talented young coders who will shape the future. Let’s break down the barriers to entering the tech industry, one byte at a time.</p>
-                <p><a href="#" target="_blank">GitHub Profile</a></p>
+                <p><a href="https://github.com/rbrooks27" target="_blank">GitHub Profile</a></p>
             </div>
 
             <div class="founder-card">
                 <h2>Hiruy Worku (Ru)</h2>
                 <p>Hi, I'm Hiruy, but you can call me Ru. I am a founding member of A.F.R.O Byte, currently studying at the College of Wooster, where I major in Computer Science. My passion lies in leveraging technology to create innovative solutions for real-world problems.</p>
                 <p>Through A.F.R.O Byte, I aim to inspire and mentor the next generation of tech leaders.</p>
-                <p><a href="#" target="_blank">GitHub Profile</a></p>
+                <p><a href="https://github.com/HiruyWorku" target="_blank">GitHub Profile</a></p>
             </div>
         </div>
     </section>
