--- a/ContactPage.html
+++ b/ContactPage.html
@@ -27,9 +27,11 @@
 
 <main class="main-content">
     <section id="contact" class="contact">
+        <div class="welcome-section" style="text-align: center; padding: 1rem; color: #aaa; margin-top: 100px;">
         <h1 class="aligncenter glitch" data-text="Founders">Founders</h1>
         <h1 class="aligncenter glitch" data-text="Founders">of</h1>
         <h1 class="aligncenter glitch" data-text="Founders">A.F.R.O Byte</h1>
+        </div>
 
         <div class="founders-container">
             <div class="founder-card">
