--- a/CoursesPage.html
+++ b/CoursesPage.html
@@ -107,7 +107,9 @@
 
 <main class="main-content">
     <section class="courses">
+        <div class="course-section" style="text-align: center; padding: 1rem; color: #aaaaaa; margin-top: 130px;"></div>
         <h1 class="aligncenter glitch" data-text="Courses for Coders">Courses for Coders</h1>
+    </div>
         <div class="course-grid">
             <!-- SQL -->
             <div class="course-card">
