--- a/ResourcesPage.html
+++ b/ResourcesPage.html
@@ -95,7 +95,9 @@
 
 <main class="main-content">
   <section class="resources">
+    <div class="welcome-section" style="text-align: center; padding: 1rem; color: #aaa; margin-top: 80px;"></div>
     <h1 class="aligncenter glitch" data-text="Coding Resources">Coding Resources</h1>
+  </div>
     <div class="resources-grid">
       <div class="resource-card">
         <h2>Documentation</h2>
