--- a/CoursesPage.html
+++ b/CoursesPage.html
@@ -108,7 +108,7 @@
 <main class="main-content">
     <section class="courses">
         <div class="course-section" style="text-align: center; padding: 1rem; color: #aaaaaa; margin-top: 130px;"></div>
-        <h1 class="aligncenter glitch" data-text="Courses for Coders">Courses for Coders</h1>
+        <h1 class="aligncenter glitch" data-text="Courses for Coders" style="color: var(--text-color);">Courses for Coders</h1>
     </div>
         <div class="course-grid">
             <!-- SQL -->
