--- a/ResourcesPage.html
+++ b/ResourcesPage.html
@@ -97,7 +97,6 @@
   <section class="resources">
     <div class="welcome-section" style="text-align: center; padding: 1rem; color: #aaa; margin-top: 80px;"></div>
     <h1 class="aligncenter glitch" data-text="Coding Resources">Coding Resources</h1>
-  </div>
     <div class="resources-grid">
       <div class="resource-card">
         <h2>Documentation</h2>
@@ -133,6 +132,11 @@
         <h2>Technical Interview Prep</h2>
         <p>Prepare for coding interviews with comprehensive resources and practice problems.</p>
         <a href="https://www.codepath.org/courses/tech-interview-prep?utm_term=coding%20interview%20practice&utm_campaign=Search_Tech_Interview_Prep_Paid_Tuff&utm_source=google_ads&utm_medium=ppc&hsa_acc=1387130392&hsa_cam=20626846030&hsa_grp=154706564776&hsa_ad=676236766289&hsa_src=g&hsa_tgt=kwd-307708918218&hsa_kw=coding%20interview%20practice&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=Cj0KCQiA57G5BhDUARIsACgCYnx9r9J_93Pksaa3r-D2HpMjd16IT5nRKFFyR2SbMqJ_d5-OFQhRaLoaAolBEALw_wcB" target="_blank">Start Preparing</a>
+      </div>
+      <div class="resource-card">
+        <h2>Online Coding Platforms</h2>
+        <p>Practice coding through interactive coding environments and challenges.</p>
+        <a href="https://www.codecademy.com/" target="_blank">Visit Codecademy</a>
       </div>
     </div>
   </section>
