text on homepage changed

--- a/HomePage.html
+++ b/HomePage.html
@@ -28,10 +28,11 @@
     </nav>
 </header>
 
-<div class="welcome-section" style="text-align: center; padding: 1rem; color: #aaa; margin-top: 130px;">
-    <h1>Welcome to A.F.R.O Byte</h1>
-    <p>Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
+<div class="welcome-section" style="text-align: center; padding: 1rem; margin-top: 130px;">
+    <h1 style="color: var(--text-color);">Welcome to A.F.R.O Byte!</h1>
+    <p style="color: var(--text-color);">Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
 </div>
+
 
 <div class="main-content">
     <div class="row">
