--- a/ContactPage.html
+++ b/ContactPage.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - A.F.R.O Byte</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/A.F.R.O.-Byte/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
 <header class="header">
     <a href="HomePage.html" class="logo">
-        <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
+        <img src="/A.F.R.O.-Byte/CroppedLogo.jpg" alt="Logo" class="logo-img">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
         <ul>
-            <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-            <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-            <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
+            <a href="/A.F.R.O.-Byte/HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a>
+            <a href="/A.F.R.O.-Byte/LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a>
+            <a href="/A.F.R.O.-Byte/CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a>
+            <a href="/A.F.R.O.-Byte/ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a>
+            <a href="/A.F.R.O.-Byte/ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a>
+            <a href="/A.F.R.O.-Byte/ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a>
         </ul>
     </nav>
 </header>
