--- a/CoursesPage.html
+++ b/CoursesPage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses - A.F.R.O Byte Coders</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/A.F.R.O.-Byte/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,17 +91,17 @@
 <body>
 <header class="header">
     <a href="#home" class="logo">
-        <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
+        <img src="/A.F.R.O.-Byte/CroppedLogo.jpg" alt="Logo" class="logo-img">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
         <ul>
-            <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-            <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-             <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
+            <a href="/A.F.R.O.-Byte/HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a>
+            <a href="/A.F.R.O.-Byte/LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a>
+            <a href="/A.F.R.O.-Byte/CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a>
+            <a href="/A.F.R.O.-Byte/ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a>
+            <a href="/A.F.R.O.-Byte/ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a>
+            <a href="/A.F.R.O.-Byte/ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a>
         </ul>
     </nav>
 </header>
@@ -130,7 +130,7 @@
             <div class="course-card">
                 <h2>JavaScript</h2>
                 <p>Explore JavaScript, the language of the web, to build interactive websites.</p>
-                <a href="LearnPage.html" class="btn">Start Learning</a>
+                <a href="/A.F.R.O.-Byte/LearnPage.html" class="btn">Start Learning</a>
                 <iframe width="300" height="200" src="https://youtube.com/embed/fju9ii8YsGs" title="JavaScript Course Video" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- C -->
@@ -174,6 +174,6 @@
 <footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
     <p>AfroByte 2024</p>
 </footer>
-<script src="script.js"></script>
+<script src="/A.F.R.O.-Byte/script.js"></script>
 </body>
 </html>
