--- a/HomePage.html
+++ b/HomePage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to A.F.R.O Byte</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/A.F.R.O.-Byte/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
 
         /* Hero Section */
         .hero {
-            background: url('hero-image.jpg') no-repeat center center/cover;
+            background: url('/A.F.R.O.-Byte/hero-image.jpg') no-repeat center center/cover;
             padding: 50px 0;
             text-align: center;
             color: white;
@@ -143,18 +143,18 @@
 <body>
 
 <header class="header">
-    <a href="HomePage.html" class="logo">
-        <img src="CroppedLogo.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
+    <a href="/A.F.R.O.-Byte/HomePage.html" class="logo">
+        <img src="/A.F.R.O.-Byte/CroppedLogo.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
         <ul>
-            <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-            <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-            <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
+            <li><a href="/A.F.R.O.-Byte/HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
+            <li><a href="/A.F.R.O.-Byte/LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
+            <li><a href="/A.F.R.O.-Byte/CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
+            <li><a href="/A.F.R.O.-Byte/ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
+            <li><a href="/A.F.R.O.-Byte/ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
+            <li><a href="/A.F.R.O.-Byte/ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
         </ul>
     </nav>
 </header>
@@ -164,24 +164,24 @@
     <h1>Welcome to A.F.R.O Byte!</h1>
     <p>Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
     </div>
-    <a href="LearnPage.html" class="cta-button">Get Started</a>
+    <a href="/A.F.R.O.-Byte/LearnPage.html" class="cta-button">Get Started</a>
 </section>
 
 <section class="featured-programs">
     <div class="program-card">
         <h3>Internship Opportunities</h3>
         <p>Get hands-on experience with leading tech companies.</p>
-        <a href="CoursesPage.html" class="cta-button">Learn More</a>
+        <a href="/A.F.R.O.-Byte/CoursesPage.html" class="cta-button">Learn More</a>
     </div>
     <div class="program-card">
         <h3>Coding Bootcamps</h3>
         <p>Accelerate your career with our comprehensive bootcamps.</p>
-        <a href="LearnPage.html" class="cta-button">Learn More</a>
+        <a href="/A.F.R.O.-Byte/LearnPage.html" class="cta-button">Learn More</a>
     </div>
     <div class="program-card">
         <h3>Mentorship Programs</h3>
         <p>Get guidance and support from industry experts.</p>
-        <a href="ContactPage.html" class="cta-button">Learn More</a>
+        <a href="/A.F.R.O.-Byte/ContactPage.html" class="cta-button">Learn More</a>
     </div>
 </section>
 
@@ -190,27 +190,27 @@
     <div class="blog-card">
         <h3>How to Prepare for Tech Internships</h3>
         <p>Get tips on how to ace your tech internship interviews...</p>
-        <a href="blog/article-1.html" class="cta-button">Read More</a>
+        <a href="/A.F.R.O.-Byte/blog/article-1.html" class="cta-button">Read More</a>
     </div>
     <div class="blog-card">
         <h3>5 Skills Every Developer Should Learn in 2024</h3>
         <p>Discover the key skills to stand out as a developer this year...</p>
-        <a href="blog/article-2.html" class="cta-button">Read More</a>
+        <a href="/A.F.R.O.-Byte/blog/article-2.html" class="cta-button">Read More</a>
     </div>
 </section>
 
 <section class="cta">
     <h2>Ready to Level Up?</h2>
     <p>Join the A.F.R.O Byte community today and start your journey in tech!</p>
-    <a href="signup.html" class="cta-button">Sign Up Now</a>
+    <a href="/A.F.R.O.-Byte/signup.html" class="cta-button">Sign Up Now</a>
 </section>
 
 <footer>
     <p>&copy; AfroByte 2024</p>
     <div class="footer-links">
-        <a href="privacy.html">Privacy Policy</a>
-        <a href="terms.html">Terms of Service</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="/A.F.R.O.-Byte/privacy.html">Privacy Policy</a>
+        <a href="/A.F.R.O.-Byte/terms.html">Terms of Service</a>
+        <a href="/A.F.R.O.-Byte/contact.html">Contact Us</a>
     </div>
     <div class="social-links">
         <a href="#"><i class="bx bx-facebook"></i></a>
@@ -219,6 +219,6 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="/A.F.R.O.-Byte/script.js"></script>
 </body>
 </html>
