--- a/ResourcesPage.html
+++ b/ResourcesPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resources - A.F.R.O Byte</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/A.F.R.O.-Byte/style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <style>
     .resources-grid {
@@ -78,18 +78,18 @@
 </head>
 <body>
 <header class="header">
-  <a href="HomePage.html" class="logo">
-    <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
+  <a href="/A.F.R.O.-Byte/HomePage.html" class="logo">
+    <img src="/A.F.R.O.-Byte/CroppedLogo.jpg" alt="Logo" class="logo-img">
   </a>
   <i class='bx bx-menu' id="menu-icon"></i>
   <nav class="navbar">
     <ul>
-      <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-      <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-      <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-      <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-      <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-      <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
+      <li><a href="/A.F.R.O.-Byte/HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
+      <li><a href="/A.F.R.O.-Byte/LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
+      <li><a href="/A.F.R.O.-Byte/CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
+      <li><a href="/A.F.R.O.-Byte/ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
+      <li><a href="/A.F.R.O.-Byte/ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
+      <li><a href="/A.F.R.O.-Byte/ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
     </ul>
   </nav>
 </header>
@@ -132,7 +132,7 @@
       <div class="resource-card">
         <h2>Technical Interview Prep</h2>
         <p>Prepare for coding interviews with comprehensive resources and practice problems.</p>
-        <a href="https://www.codepath.org/courses/tech-interview-prep?utm_term=coding%20interview%20practice&utm_campaign=Search_Tech_Interview_Prep_Paid_Tuff&utm_source=google_ads&utm_medium=ppc&hsa_acc=1387130392&hsa_cam=20626846030&hsa_grp=154706564776&hsa_ad=676236766289&hsa_src=g&hsa_tgt=kwd-307708918218&hsa_kw=coding%20interview%20practice&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=Cj0KCQiA57G5BhDUARIsACgCYnx9r9J_93Pksaa3r-D2HpMjd16IT5nRKFFyR2SbMqJ_d5-OFQhRaLoaAolBEALw_wcB" target="_blank">Start Preparing</a>
+        <a href="https://www.codepath.org/courses/tech-interview-prep" target="_blank">Start Preparing</a>
       </div>
       <div class="resource-card">
         <h2>Online Coding Platforms</h2>
@@ -147,6 +147,7 @@
     <p>AfroByte 2024</p>
 </footer>
 
-<script src="script.js"></script>
+<script src="/A.F.R.O.-Byte/script.js"></script>
 </body>
 </html>
+
