--- a/ContactPage.html
+++ b/ContactPage.html
@@ -15,12 +15,12 @@
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
         <ul>
-            <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-            <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-            <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
+            <a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a>
+            <a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a>
+            <a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a>
+            <a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a>
+            <a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a>
+            <a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a>
         </ul>
     </nav>
 </header>
