--- a/HomePage.html
+++ b/HomePage.html
@@ -9,8 +9,138 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        /* Global Styles */
+        :root {
+            --bg-color: #0d0d0d;
+            --text-color: #00ff00;
+            --navbar-bg: #1a1a1a;
+            --main-color: #00ff00;
+            --hover-color: #0056b3;
+        }
+
+        body {
+            font-family: 'Source Code Pro', monospace;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Hero Section */
+        .hero {
+            background: url('hero-image.jpg') no-repeat center center/cover;
+            padding: 50px 0;
+            text-align: center;
+            color: white;
+        }
+
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+
+        .hero p {
+            font-size: 1.5rem;
+            margin-bottom: 30px;
+        }
+
+        .cta-button {
+            background-color: var(--main-color);
+            padding: 15px 30px;
+            color: white;
+            font-size: 1.2rem;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .cta-button:hover {
+            background-color: var(--hover-color);
+        }
+
+        /* Featured Programs Section */
+        .featured-programs {
+            display: flex;
+            justify-content: space-around;
+            margin: 50px 20px;
+        }
+
+        .program-card {
+            background-color: #333;
+            padding: 20px;
+            border-radius: 10px;
+            width: 30%;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+        }
+
+        .program-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .program-card h3 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+
+        .program-card p {
+            font-size: 1.1rem;
+            margin-bottom: 20px;
+        }
+
+        /* Blog Section */
+        .blog {
+            padding: 50px 20px;
+        }
+
+        .blog-card {
+            background-color: #333;
+            padding: 20px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        .blog-card h3 {
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+        }
+
+        .blog-card p {
+            font-size: 1rem;
+            margin-bottom: 15px;
+        }
+
+        /* Call to Action Section */
+        .cta {
+            background-color: var(--main-color);
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        .cta h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        .cta p {
+            color: #aaa; /* Changed text color to grey */
+            font-size: 1.5rem; /* Increased size */
+            margin-bottom: 30px;
+        }
+
+        /* Footer */
+        footer {
+            background-color: var(--navbar-bg);
+            color: #aaa;
+            text-align: center;
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
+
 <header class="header">
     <a href="HomePage.html" class="logo">
         <img src="CroppedLogo.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
@@ -28,33 +158,65 @@
     </nav>
 </header>
 
-<div class="welcome-section" style="text-align: center; padding: 1rem; margin-top: 130px;">
-    <h1 style="color: var(--text-color);">Welcome to A.F.R.O Byte!</h1>
-    <p style="color: var(--text-color);">Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
-</div>
-
-
-<div class="main-content">
-    <div class="row">
-        <div class="left-column">
-            <div class="card">
-                <h2 class="aligncenter glitch" data-text="CS Internships">CS Internships</h2>
-                <div class="video-container">
-                    <iframe src="https://youtube.com/embed/nak-UbbpxnU?si=0T24Bfo97cgC05Xk" title="Internships Video 1" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="video-container">
-                    <iframe src="https://youtube.com/embed/OhMBBbhbX6A?si=47mzeoss4yzHerBI" title="Internships Video 2" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="video-container">
-                    <iframe src="https://youtube.com/embed/BDepj5WFkas?si=N7PHGAHAkAUSyD-W" title="Internships Video 3" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
+<section class="hero">
+    <div class="welcome-section" style="text-align: center; padding: 1rem; color: #aaa; margin-top: 100px;">
+        <h1>Welcome to A.F.R.O Byte!</h1>
+        <p>Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
     </div>
-</div>
+    <a href="LearnPage.html" class="cta-button">Get Started</a>
+</section>
 
-<footer style="text-align: center; padding: 1rem; background-color: var(--navbar-bg); color: #aaa; font-size: 0.8rem;">
-    <p>AfroByte 2024</p>
+<section class="featured-programs">
+    <div class="program-card">
+        <h3>Internship Opportunities</h3>
+        <p>Get hands-on experience with leading tech companies.</p>
+        <a href="CoursesPage.html" class="cta-button">Learn More</a>
+    </div>
+    <div class="program-card">
+        <h3>Coding Bootcamps</h3>
+        <p>Accelerate your career with our comprehensive bootcamps.</p>
+        <a href="LearnPage.html" class="cta-button">Learn More</a>
+    </div>
+    <div class="program-card">
+        <h3>Mentorship Programs</h3>
+        <p>Get guidance and support from industry experts.</p>
+        <a href="ContactPage.html" class="cta-button">Learn More</a>
+    </div>
+</section>
+
+<section class="blog">
+    <h2>Latest News</h2>
+    <div class="blog-card">
+        <h3>How to Prepare for Tech Internships</h3>
+        <p>Get tips on how to ace your tech internship interviews...</p>
+        <a href="blog/article-1.html" class="cta-button">Read More</a>
+    </div>
+    <div class="blog-card">
+        <h3>5 Skills Every Developer Should Learn in 2024</h3>
+        <p>Discover the key skills to stand out as a developer this year...</p>
+        <a href="blog/article-2.html" class="cta-button">Read More</a>
+    </div>
+</section>
+
+<section class="cta">
+    <h2>Ready to Level Up?</h2>
+    <p>Join the A.F.R.O Byte community today and start your journey in tech!</p>
+    <a href="signup.html" class="cta-button">Sign Up Now</a>
+</section>
+
+
+<footer>
+    <p>&copy; AfroByte 2024</p>
+    <div class="footer-links">
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    <div class="social-links">
+        <a href="#"><i class="bx bx-facebook"></i></a>
+        <a href="#"><i class="bx bx-twitter"></i></a>
+        <a href="#"><i class="bx bx-linkedin"></i></a>
+    </div>
 </footer>
 
 <script src="script.js"></script>
