--- a/LearnPage.html
+++ b/LearnPage.html
@@ -52,7 +52,7 @@
 <body>
 
 <header class="header">
-  <a href="#home" class="logo">
+  <a href="HomePage.html" class="logo">
     <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
   </a>
   <i class='bx bx-menu' id="menu-icon"></i>
