--- a/HomePage.html
+++ b/HomePage.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/A.F.R.O.-Byte/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to A.F.R.O Byte</title>
-    <link rel="stylesheet" href="/A.F.R.O.-Byte/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +29,7 @@
 
         /* Hero Section */
         .hero {
-            background: url('/A.F.R.O.-Byte/hero-image.jpg') no-repeat center center/cover;
+            background: url('hero-image.jpg') no-repeat center center/cover;
             padding: 50px 0;
             text-align: center;
             color: white;
@@ -143,18 +142,18 @@
 <body>
 
 <header class="header">
-    <a href="/A.F.R.O.-Byte/HomePage.html" class="logo">
-        <img src="/A.F.R.O.-Byte/CroppedLogo.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
+    <a href="HomePage.html" class="logo">
+        <img src="CroppedLogo.jpg" alt="Logo" class="logo-img glitch" data-text="A.F.R.O">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
         <ul>
-            <li><a href="/A.F.R.O.-Byte/HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
+            <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
+            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
+            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
+            <li><a href="ChatbotPage.html" class="nav-link">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
+            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
+            <li><a href="ResourcesPage.html" class="nav-link active">Resources <i class='bx bx-folder'></i></a></li>
         </ul>
     </nav>
 </header>
@@ -164,7 +163,7 @@
         <h1>Welcome to A.F.R.O Byte!</h1>
         <p>Your online platform dedicated to empowering minority groups and elevating them to new heights in technology.</p>
     </div>
-    <a href="/A.F.R.O.-Byte/LearnPage.html" class="cta-button">Get Started</a>
+    <a href="LearnPage.html" class="cta-button">Get Started</a>
 </section>
 
 <section class="featured-programs">
@@ -176,12 +175,12 @@
     <div class="program-card">
         <h3>Coding Bootcamps</h3>
         <p>Accelerate your career with our comprehensive bootcamps.</p>
-        <a href="/A.F.R.O.-Byte/LearnPage.html" class="cta-button">Learn More</a>
+        <a href="LearnPage.html" class="cta-button">Learn More</a>
     </div>
     <div class="program-card">
         <h3>Mentorship Programs</h3>
         <p>Get guidance and support from industry experts.</p>
-        <a href="/A.F.R.O.-Byte/ContactPage.html" class="cta-button">Learn More</a>
+        <a href="ContactPage.html" class="cta-button">Learn More</a>
     </div>
 </section>
 
@@ -220,6 +219,6 @@
     </div>
 </footer>
 
-<script src="/A.F.R.O.-Byte/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
