--- a/ChatbotPage.html
+++ b/ChatbotPage.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/A.F.R.O.-Byte/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Bot - A.F.R.O Byte Coders</title>
@@ -133,17 +132,17 @@
 <body>
 <header class="header">
     <a href="HomePage.html" class="logo">
-        <img src="/A.F.R.O.-Byte/CroppedLogo.jpg" alt="Logo" class="logo-img">
+        <img src="CroppedLogo.jpg" alt="Logo" class="logo-img">
     </a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
         <ul>
-            <li><a href="/A.F.R.O.-Byte/HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/ChatbotPage.html" class="nav-link active">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
-            <li><a href="/A.F.R.O.-Byte/ResourcesPage.html" class="nav-link">Resources <i class='bx bx-folder'></i></a></li>
+            <li><a href="HomePage.html" class="nav-link">Home <i class='bx bx-home'></i></a></li>
+            <li><a href="LearnPage.html" class="nav-link">Learn <i class='bx bx-book'></i></a></li>
+            <li><a href="CoursesPage.html" class="nav-link">Courses <i class='bx bx-code-alt'></i></a></li>
+            <li><a href="ChatbotPage.html" class="nav-link active">Chatbot <i class='bx bx-message-square-dots'></i></a></li>
+            <li><a href="ContactPage.html" class="nav-link">Contact <i class='bx bx-envelope'></i></a></li>
+            <li><a href="ResourcesPage.html" class="nav-link">Resources <i class='bx bx-folder'></i></a></li>
         </ul>
     </nav>
 </header>
