home page updates

--- a/HomePage.html
+++ b/HomePage.html
@@ -171,6 +171,15 @@
         <h3>Internship Opportunities</h3>
         <p>Get hands-on experience with leading tech companies.</p>
         <a href="CoursesPage.html" class="cta-button">Learn More</a>
+        <div class="video-container">
+            <iframe src="https://youtube.com/embed/nak-UbbpxnU?si=0T24Bfo97cgC05Xk" title="Internships Video 1" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://youtube.com/embed/OhMBBbhbX6A?si=47mzeoss4yzHerBI" title="Internships Video 2" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://youtube.com/embed/BDepj5WFkas?si=N7PHGAHAkAUSyD-W" title="Internships Video 3" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
     <div class="program-card">
         <h3>Coding Bootcamps</h3>
@@ -189,34 +198,24 @@
     <div class="blog-card">
         <h3>How to Prepare for Tech Internships</h3>
         <p>Get tips on how to ace your tech internship interviews...</p>
-        <a href="blog/article-1.html" class="cta-button">Read More</a>
+        <a href="https://www.indeed.com/career-advice/career-development/what-to-expect-during-an-internship-interview" class="cta-button">Read More</a>
     </div>
     <div class="blog-card">
         <h3>5 Skills Every Developer Should Learn in 2024</h3>
         <p>Discover the key skills to stand out as a developer this year...</p>
-        <a href="blog/article-2.html" class="cta-button">Read More</a>
+        <a href="https://dev.to/somadevtoo/5-skills-programmers-and-developers-should-learn-in-2024-3bmp" class="cta-button">Read More</a>
     </div>
 </section>
 
 <section class="cta">
-    <h2>Ready to Level Up?</h2>
-    <p>Join the A.F.R.O Byte community today and start your journey in tech!</p>
+    <h2 style="color: #111010;">Ready to Level Up?</h2> <!-- Updated to grey -->
+    <p style ="color: #111010">Join the A.F.R.O Byte community today and start your journey in tech!</p>
     <a href="signup.html" class="cta-button">Sign Up Now</a>
 </section>
 
 
 <footer>
-    <p>&copy; AfroByte 2024</p>
-    <div class="footer-links">
-        <a href="privacy.html">Privacy Policy</a>
-        <a href="terms.html">Terms of Service</a>
-        <a href="contact.html">Contact Us</a>
-    </div>
-    <div class="social-links">
-        <a href="#"><i class="bx bx-facebook"></i></a>
-        <a href="#"><i class="bx bx-twitter"></i></a>
-        <a href="#"><i class="bx bx-linkedin"></i></a>
-    </div>
+    <p>AfroByte</p>
 </footer>
 
 <script src="script.js"></script>
